OR-8 : Get partners by ids in string or by leader in region or disctrict
